correccion de las rutas

--- a/pages/cfop.html
+++ b/pages/cfop.html
@@ -18,10 +18,10 @@
             <input type="checkbox" id="check" class="nav__input">
             <ul class="nav__menu">
                 <li><a class="header-footer" href="../index.html">Inicio</a></li>
-                <li><a class="header-footer" href="../pages/tutoriales.html">Tutoriales</a></li>
-                <li><a class="header-footer" href="../pages/marcas.html">Marcas</a></li>
-                <li><a class="header-footer" href="../pages/consejos.html">Consejos</a></li>
-                <li><a class="header-footer" href="../pages/contacto.html">Contacto</a></li>
+                <li><a class="header-footer" href="tutoriales.html">Tutoriales</a></li>
+                <li><a class="header-footer" href="marcas.html">Marcas</a></li>
+                <li><a class="header-footer" href="consejos.html">Consejos</a></li>
+                <li><a class="header-footer" href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
