correccion de las rutas y el footer

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
             <input type="checkbox" id="check" class="nav__input">
             <ul class="nav__menu">
                 <li><a class="header-footer" href="../index.html">Inicio</a></li>
-                <li><a class="header-footer" href="../pages/tutoriales.html">Tutoriales</a></li>
-                <li><a class="header-footer" href="../pages/marcas.html">Marcas</a></li>
-                <li><a class="header-footer" href="../pages/consejos.html">Consejos</a></li>
-                <li><a class="header-footer" href="../pages/contacto.html">Contacto</a></li>
+                <li><a class="header-footer" href="./pages/tutoriales.html">Tutoriales</a></li>
+                <li><a class="header-footer" href="./pages/marcas.html">Marcas</a></li>
+                <li><a class="header-footer" href="./pages/consejos.html">Consejos</a></li>
+                <li><a class="header-footer" href="./pages/contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
@@ -33,7 +33,7 @@
     <main>
         <h2 class="title">Todo lo que necesitás saber</h2>
         <div class="imagen-texto">
-            <img src="/images/cubos.jpg" alt="cubos">
+            <img src="./images/cubos.jpg" alt="cubos">
             <p>
                 Bienvenidos a la guía definitiva del cubo de rubik! Aquí van a encontrar los mejores tutoriales y canales de youtube, consejos y más sobre el cubo 3x3. Está orientado a todo público, desde los que no saben armarlo y quieren aprender, hasta los que ya saben armarlo en pocos segundos y quieren bajar sus tiempos. Ojalá que les sirva, y ¡a cubear!
            </p>
@@ -45,6 +45,7 @@
         <p>Hecho por Simón Lipshitz</p>
         <a class="policy header-footer" href="">Política de privacidad</a>
         <a class="policy header-footer" href="">Términos de uso</a>
+    </footer>    
 </div>
 </body>
 
