correccion de las rutas y el footer

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </label>
             <input type="checkbox" id="check" class="nav__input">
             <ul class="nav__menu">
-                <li><a class="header-footer" href="../index.html">Inicio</a></li>
+                <li><a class="header-footer" href="index.html">Inicio</a></li>
                 <li><a class="header-footer" href="./pages/tutoriales.html">Tutoriales</a></li>
                 <li><a class="header-footer" href="./pages/marcas.html">Marcas</a></li>
                 <li><a class="header-footer" href="./pages/consejos.html">Consejos</a></li>
@@ -45,7 +45,7 @@
         <p>Hecho por Simón Lipshitz</p>
         <a class="policy header-footer" href="">Política de privacidad</a>
         <a class="policy header-footer" href="">Términos de uso</a>
-    </footer>    
+    </footer>   
 </div>
 </body>
 
