implementación de sass

--- a/pages/consejos.html
+++ b/pages/consejos.html
@@ -30,9 +30,45 @@
         <div>
             <h2 class="title">Consejos</h2>
             <p class="subtitulo">
-                Esta e una lista de consejos personales que considero fundamentales para poder bajar tiempos y hacer resoluciones más efectivas
+                Esta es una lista de consejos personales que considero fundamentales para poder bajar tiempos y hacer resoluciones más efectivas
             </p>
         </div>
+
+        <div>
+            <h3><b>1. Limpiar el cubo</b></h3>
+            <p>
+                Limpiar el cubo es fundamental, ya que si no lo limpias se vuelve menos duradero, pero sobre todo se vuelve mas lento. ¿Cada cuánto limpiarlo? Depeniendo del uso que le des. Si lo usas un ratito todos los días, cada 2 o 3 semanas es lo recomendable. Si lo usas solo de vez en cuando, cada un mes está bien. Ahora si lo usas todos o casi todos los días durante un tiempo prolongado, cada 1 semana es lo mejor, para que tus tiempos se mantengan constantes y el cubo en buenas condiciones. Acá les dejo un <a href="">tutorial de cómo limpiar el cubo</a>
+            </p>
+        </div>
+
+        <div>
+            <h3><b>2. Practicar look ahead</b></h3>
+            <p>
+                "Look ahead" (en español mirar hacia adelante), se refiere a ver el siguiente movimiento. Por ejemplo, si estás haciendo la cruz, no tenés que ver cómo haces la cruz, ya sabes lo que tenés que hacer entonces mirás el primer par de f2l, y mientras haces ese par tenés que pensar el siguiente, y así susesivamente. Para practicar esto, recomiendo hacer slow turning, que consiste en girar el cubo más lento de lo que estamos acostumbrados, para poder hacer una resolucion fluida.
+            </p>
+        </div>
+
+        <div>
+            <h3><b>3. Aprender fingertricks avanzados</b></h3>
+            <p>
+                Mover eficientemente el cubo es muy importante, ayuda a que las resoluciones sean mas fluidas, por lo tanto, mejores. Para saber girar bien el cubo, es importante aprender fingertricks avanzados, y también aprender los fingetricks de cada caso de oll y pll en particular.
+            </p>
+        </div>
+
+        <div>
+            <h3><b>4. Aprender f2l avanzado</b></h3>
+            <p>
+                Si sabés hacer muchos casos de f2l, desde muchas posiciones distintas, te va a ayudar mucho, ya que, sumado al look ahead, vas a a disminuir los regrips, y por lo tanto, bajar los tiempos.
+            </p>
+        </div>
+
+        <div>
+            <h3><b>5. Crea tu propia rutina</b></h3>
+            <p>
+                Es difícil tener una rutina y mantenerla durante un tiempo, pero ayuda mucho. Algunos de los ejercicios que yo pondría en mi rutina son: slow turning, practicar oll y pll, aprender nuevos algoritmos, practicar otros cubos, hacer cruz + f2l, aprender f2l avanzado y ver videos de example solves.
+            </p>
+        </div>
+
     </main>
 
     <footer>
