--- a/pages/marcas.html
+++ b/pages/marcas.html
@@ -31,7 +31,7 @@
         <div>
             <h2 class="title">Marcas y Modelos</h2>
             <p class="subtitulo">
-                Existen muchas marcas de cubos y modelos, aunque las tres principales son: Moyu, Quiyi y GAN. En Argentina no es tan fácil de conseguir cubos, porque no hay mucha variedad, pero los mas populares suelen estar. Yo elegí e hice una lista de los mejores cubos según nivel, cada uno con sus pros y contras. Ustedes sabrán cual elegir, según sus circunstancias.
+                Existen muchas marcas de cubos y modelos, aunque las tres principales son: Moyu, Quiyi y GAN. En Argentina no es tan fácil de conseguir cubos, porque no hay mucha variedad, pero los mas populares suelen estar en Mercado Libre o en tiendas de cubos. Yo elegí e hice una lista de los mejores cubos según nivel, cada uno con sus pros y contras. Ustedes sabrán cual elegir, según sus circunstancias.
             </p>
         </div>
 
@@ -39,11 +39,11 @@
             <div class="marcas">
                 <h3>Quiyi warrior w</h3>
                 <img src="../images/quiyiwarrior.jpg" alt="quiyi warrior w">
-                <p>El quiyi warrior w es el cubo básico, con el que todo aquel que quiere aprender a armar el cubo rubik debería empezar. Se mueve bastante bien, y es más barato que otros cubos que son peores. por lo que si recién aprendiern o quieren aprender a armar el cubo rubik, les recomiendo este cubo</p>
+                <p>El quiyi warrior w es el cubo básico, con el que todo aquel que quiere aprender a armar el cubo rubik debería empezar. Tiene un buen giro, y es más barato que otros cubos que son peores. por lo que si recién aprendiern o quieren aprender a armar el cubo rubik, les recomiendo este cubo</p>
             </div>
 
             <div class="marcas">
-                <h3>Cubos para más avanzados</h3>
+                <h3>Cubos gama media</h3>
                 <p>Si ya bajaste mucho tus tiempos y sientes que el quiyi warrior w se te queda lento, hay varios modelos de gama media con los que se pueden llegar a hacer resoluciones muy rápidas:</p>
                 <ul>
                     <li>
@@ -84,6 +84,39 @@
                         </p>
                       </li>
 
+                </ul>
+            </div>
+
+            <div class="marcas">
+
+                <h3>Cubos Gama alta</h3>
+                    <p>
+                        Estos son los mejores cubos del mercado, y los mas caros al mismo tiempo. Si todavía no bajas de los 20 segundos, no recomiendo comprar uno de estos, porque no te va a hacer mucha diferencia con un cubo de gama media, y sale el doble de caro. Para los que ya bajaron de los 15 o 10 segundos, sí recomiendo comprar alguno de estos cubos.
+                    </p>
+                <ul>
+                    <li>
+                      <h4><b>Tornado V3</b></h4> 
+                      <img src="" alt=""> 
+                    </li>
+
+                    <li>
+                        <h4><b>GAN 13 Maglev</b></h4>
+                        <img src="" alt="">  
+                      </li>
+
+                      <li>
+                        <h4><b>Super RS3M</b></h4> 
+                        <img src="" alt=""> 
+                      </li>
+
+                      <li>
+                        <h4><b>Quiyi MP</b></h4>  
+                        <img src="" alt="">
+                      </li>
+
+                      <p>
+                        Todos estos son cubos muy buenos, uno con mejor giro, otro con mejor corte de esquinas, etc. Pero lo importante es ver cuál se adapta mejor a ustedes. Cualquiera de estos cubos les va a ayudar a mejorar, pero quizá hay uno que les va mejor que otro, así que les recomiendo ver un video que compare a los cubos y ver cual les gusta más.
+                      </p>
                 </ul>
             </div>
         </section>
