sass responsive y aplicación de SEO

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://kit.fontawesome.com/65c11b845a.js" crossorigin="anonymous"></script>
-    <title>Sub10</title>
+
+    <meta name="description" content="Todo lo que necesitás saber del cubo rubik. Tutoriales, Canales de youtube, Marcas, etc.">
+    <title>Aprende a armar el cubo Rubik</title>
 </head>
 
 <body>
