--- a/pages/cfop.html
+++ b/pages/cfop.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/styles.css">
     <script src="https://kit.fontawesome.com/65c11b845a.js" crossorigin="anonymous"></script>
-    <title>Tutoriales</title>
+    <title>Método Fridrich</title>
 </head>
 <body>
     <header>
