--- a/pages/marcas.html
+++ b/pages/marcas.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/styles.css">
     <script src="https://kit.fontawesome.com/65c11b845a.js" crossorigin="anonymous"></script>
-    <title>Marcas</title>
+    
+    <meta name="description" content="Los mejores cubos rubik según calidad y precio">
+    <title>Marcas y Modelos de Cubos 3x3</title>
 </head>
 <body>
     <header>
@@ -35,14 +37,14 @@
             </p>
         </div>
 
-        <section class="marcas-container">
-            <div class="marcas">
+        <section class="blog-container">
+            <div class="blog">
                 <h3>Quiyi warrior w</h3>
                 <img src="../images/quiyiwarrior.jpg" alt="quiyi warrior w">
                 <p>El quiyi warrior w es el cubo básico, con el que todo aquel que quiere aprender a armar el cubo rubik debería empezar. Tiene un buen giro, y es más barato que otros cubos que son peores. por lo que si recién aprendiern o quieren aprender a armar el cubo rubik, les recomiendo este cubo</p>
             </div>
 
-            <div class="marcas">
+            <div class="blog">
                 <h3>Cubos gama media</h3>
                 <p>Si ya bajaste mucho tus tiempos y sientes que el quiyi warrior w se te queda lento, hay varios modelos de gama media con los que se pueden llegar a hacer resoluciones muy rápidas:</p>
                 <ul>
@@ -87,7 +89,7 @@
                 </ul>
             </div>
 
-            <div class="marcas">
+            <div class="blog">
 
                 <h3>Cubos Gama alta</h3>
                     <p>
