finalizacion de la estructura html

--- a/pages/marcas.html
+++ b/pages/marcas.html
@@ -98,22 +98,22 @@
                 <ul>
                     <li>
                       <h4><b>Tornado V3</b></h4> 
-                      <img src="" alt=""> 
+                      <img src="../images/tornadov3.jpg" alt="Tornado v3"> 
                     </li>
 
                     <li>
                         <h4><b>GAN 13 Maglev</b></h4>
-                        <img src="" alt="">  
+                        <img src="../images/gan13.jpg" alt="GAN 13 Maglev">  
                       </li>
 
                       <li>
                         <h4><b>Super RS3M</b></h4> 
-                        <img src="" alt=""> 
+                        <img src="../images/superrs3m.jpg" alt="Super RS3M"> 
                       </li>
 
                       <li>
-                        <h4><b>Quiyi MP</b></h4>  
-                        <img src="" alt="">
+                        <h4><b>Quiyi MP ball core</b></h4>  
+                        <img src="../images/quiyimp.jpg" alt="Quiyi MP ball core">
                       </li>
 
                       <p>
