--- a/pages/tutoriales.html
+++ b/pages/tutoriales.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../css/styles.css">
     <script src="https://kit.fontawesome.com/65c11b845a.js" crossorigin="anonymous"></script>
 
+    <meta name="keywords" content="Cubo Tutoriales Principiantes 3x3 Fridich">
     <meta name="description" content="Tutoriales del cubo de rubik ordenados del más básico al más complejo. ¿Qué aprender despues del método de principiantes?">
     <title>Todos los tutoriales del cubo 3x3</title>
 </head>
