acomodacion del titulo

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1 class="título-principal">Guia definitiva del cubo rubik</h1>
+        <h1 class="título-principal"> Guia definitiva <br> del cubo rubik</h1>
         <nav>
             <label for="check" class="checkbtn">
                 <i class="fa-solid fa-bars"></i>
